--- a/hand-collision.html
+++ b/hand-collision.html
@@ -172,7 +172,25 @@
                     </div>
                 </div>
             </div>
+
+            <div class="ui vertical stripe segment">
+                <div class="ui basic center aligned segment">
+                    <h1 class="ui title header">PROCESS</h1>
+                </div>
+
+                <h4 class="ui title header">DESIGN-PHASE</h4>
+                <p>The design document describes several “subjects” that had to be implemented or addressed whilst making an implementation. These are based off the predefined requirements. The solution to these subjects use the sources at the bottom of the document.</p>
+                <p>As described, this product only defines hand-movement, as there’s already a system in place to prevent your body from going through a wall.</p>
+                <p>Some sources talked about how to discourage illegal movements (through solid objects). While the suggestions regarding how the map should look like isn’t part of this system, I did come across a paper that described that a simple vibration of the controller already does a good job of preventing people from moving through walls. I have decided against this, however, as it might become confusing when implementing the vibration for other type of game-specific feedback (such as when you’d receive a message on your in-game PDA).</p>
+                <p>A later source suggested to do a combination of 2 solutions to get the best of both worlds. Have a representation of your real-life hand (ghost hand) that only shows when a 1:1 representation in-game isn’t possible, and a representation of your in-game character body, which follows the in-game physics.</p>
+                <p>In that source they talk about having the character body maintain physics and constantly attempt to reach the ghost hand’s location. I decided against this as physics is a heavy operation, and also unpredictable; enough force can sometimes still make your body clip through a wall. So instead of constantly letting the character attempt to reach the real location, it sort of “freezes” and continues moving again once the real hand location is valid again.</p>
+
+                <h4 class="ui title header">IMPLEMENT-PHASE</h4>
+                <p>During implementation the idea at first was to use normal physics and use events like “OnHit”, but as mentioned before, these calculations can get very expensive. A raytrace on the other hand can easily be done every frame (you can probably even do 100 per frame just fine).</p>
+                <p>Once the definitions of a ‘legal’ and ‘illegal’ position was thought out and peer reviewed, there was a need of two traces, where the second trace was only needed once the first “failed”.</p>
+            </div>
         </div>
+
 
 
         <div class="ui inverted vertical footer segment">
