--- a/arduino-communication.html
+++ b/arduino-communication.html
@@ -108,7 +108,7 @@
                 <div class="ui grid">
                     <div class="nine wide column">
                         <p>Once the set up has been finished at Enversed’s side, the implementation can start. There are three subjects to this: <b>Connecting</b>, <b>Protocol</b> and the <b>Sidenotes</b> resulting from the connection implementation.</p>
-                        <p>The source of the Arduino communication plugin can be found <a href="https://www.dropbox.com/sh/fgzse0m8ez08pj3/AAD2N1entVHaAHtijuiPHt0fa?dl=0" target="_blank"></a>>here</a>.</p>
+                        <p>The source of the Arduino communication plugin can be found <a href="https://www.dropbox.com/sh/fgzse0m8ez08pj3/AAD2N1entVHaAHtijuiPHt0fa?dl=0" target="_blank">here</a>.</p>
 
                         <div class="ui fluid card">
                             <div class="content">
