Updated menu structure

--- a/index.html
+++ b/index.html
@@ -36,24 +36,11 @@
                 <div class="ui simple dropdown item">
                     Products <i class="dropdown icon"></i>
                     <div class="menu">
+                        <a class="item" href="enversed-framework.html">Enversed framework</a>
                         
-                        <a class="item" href="hand-collision.html">Hand collision</a>
-                        
-                        <a class="item" href="arduino-communication.html">Arduino communication</a>
+                        <a class="item" href="proto-backend.html">PROTO back-end</a>
 
-                        <a class="item" href="screenshot-tool.html">Screenshot tool</a>
-
-                        <a class="item" href="license-spring.html">License Spring</a>
-
-                        <div class="item">
-                            Product 2 <i class="dropdown icon"></i>
-                            <div class="menu">
-                                <a class="item">Sub Product 2.1</a>
-
-                                <a class="item">Sub Product 2.2</a>
-                            </div>
-                        </div>
-
+                        <a class="item" href="proto-game-collection.html">PROTO game collection</a>
                     </div>
                 </div>
 
