Added proto games

--- a/arduino-communication.html
+++ b/arduino-communication.html
@@ -98,10 +98,10 @@
                         <p>While we already knew this subsystem would have to be implemented, it took some time before PROTO came with their specifications. Once we received their specifications I wrote down all the tasks that would have to be performed. From these tasks the PO can create an estimated amount of time to implement, and by extend a quotation.</p>
                         <p>The first and final version can be found below. Note that the final version mainly has a lot of components removed, these were decisions made by the client.</p>
 
-                        <a class="ui big blue label" href="" target="_blank">
+                        <a class="ui big blue label" href="https://www.dropbox.com/s/flle7rkp6uxkwjq/Implementation%20QR%20system-old.pdf?dl=0" target="_blank">
                             <i class="dropbox icon"></i>First version task specifications
                         </a>
-                        <a class="ui big blue label" href="" target="_blank">
+                        <a class="ui big blue label" href="https://www.dropbox.com/s/purh0u5pjp1nsri/Implementation%20QR%20system-new.pdf?dl=0" target="_blank">
                             <i class="dropbox icon"></i>Final version task specifications
                         </a>
                     </div>
