--- a/proto-game-collection.html
+++ b/proto-game-collection.html
@@ -41,7 +41,7 @@
                     <div class="menu">
                         <a class="item" href="enversed-framework.html">Enversed framework</a>
                         
-                        <a class="item" href="proto-backend.html">PROTO back-end</a>
+                        <a class="item" href="proto-backend.html">PROTO game collection</a>
                         
                         <div class="active item" href="proto-game-collection.html">
                             PROTO game collection <i class="dropdown icon"></i>
